[package]
edition = "2021"
name = "mqb-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson.workspace = true
chrono = { workspace = true, optional = true }
num-traits.workspace = true
serde.workspace = true
uuid = { workspace = true, optional = true }

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
